--- a/index.html
+++ b/index.html
@@ -26,8 +26,14 @@
 
         <h1>Wilson Eduardo Perez Santos</h1>
         <h1>Wilson Eduardo Perez Santos</h1>
-        <h1>Wilson Eduardo Perez Santos</h1>
-        <h1>Wilson Eduardo Perez Santos</h1>
+        <button onclick="CambiarColor()">Cambiar Color</button>
+    
+
     </div>
+    <script>
+        function CambiarColor(){
+            document.body.style.backgroundColor = "black";
+        }
+    </script>
 </body>
 </html>
